firstPage.css
.titles{
    text-align: center;
    margin-bottom: 25px;
}

table, th{
    border: 1px solid black;
}
.table {
    width: 60%;
    margin: 0 auto !important;
}

.table tr:nth-child(odd) {background-color: White}
.table tr:nth-child(even) {background-color: gray}


.carousel-inner img{
    height: 60vh;
    
}


#headGameTable{
    border: 3px solid black;
}

.noSort{
    width: 10px;
    height: 5px;
    background-color: darkred;
    position: relative;
    float: right;
    top:10px;

}

.sortDes{
    float: right;
    width: 0;
    height: 0;
    border-left: 10px solid transparent;
    border-right: 10px solid transparent;
    border-top: 10px solid darkred;
    position: relative;
    top: 10px;

}


.headMenu{
    display: block;
    margin: 0 auto;
    padding: 10px;
    position: fixed;
    background-color: gray;
    top: 20px;
    width: 40%;
    border: 10px solid black;
    border-radius: 20px;
    left: 0px;
    right: 0px;

}

.headMenu a{
    position: relative;
    text-align: center;
    padding: 13px;
    width: 50%;
    text-decoration: none;
    color: #000;
}

.headMenu a:hover{
    background-color: red;
}

.Header{
    margin-top: 80px;
}

#myCarousel{
    margin-top: 100px;
    border-top: 10px solid black;
    border-bottom: 10px solid black;
    margin-bottom: 20px;
}

footer {
    display: block;  
    
}
footer p {
    color: black;
    background-color: rgb(196, 185, 185);
    width: 200px;
}

.dltbutton{
    background-color: red;
    border-radius: 30px;
    margin-left: auto;
    margin-right: auto;
    display: block;
    border: 5px solid black;

}

